--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@assemblyscript/loader": "^0.27.9",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
@@ -32,7 +33,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "asbuild": "asc assembly/index.ts -b public/wasm/as-api.wasm"
   },
   "eslintConfig": {
     "extends": [
@@ -54,5 +56,8 @@
   },
   "prettier": {
     "printWidth": 120
+  },
+  "devDependencies": {
+    "assemblyscript": "^0.27.9"
   }
 }
