--- a/src/data/diseases.json
+++ b/src/data/diseases.json
@@ -12,8 +12,9 @@
       },
       { "sid": "pat-male", "rate": 0.55 },
       { "sid": "pat-female", "rate": 0.45 },
-      { "sid": "dental-prob", "rate": 1 },
       { "sid": "recent-gingival", "rate": -1 },
+      { "sid": "super", "rate": -1},
+      { "sid": "malform", "rate": -1},
       { "sid": "primary-1", "rate": -1 },
       { "sid": "permanent-1", "rate": -1 },
       { "sid": "primary-2", "rate": -1 },
@@ -46,7 +47,6 @@
       { "sid": "slow-0", "rate": 0.85 },
       { "sid": "moderate-0", "rate": 0.15 },
       { "sid": "rapid-0", "rate": -1 },
-      { "sid": "vital", "rate": -1 },
       { "sid": "nonvital", "rate": 1 },
       { "sid": "hemorrhage", "rate": -1 },
       { "sid": "pain-1", "rate": -1 },
@@ -142,8 +142,6 @@
       { "sid": "destruct-0", "rate": -1 },
       { "sid": "dispalce-2", "rate": 0.1 },
       { "sid": "destruct-1", "rate": 0.05 },
-      { "sid": "sclerotic-1", "rate": 0.05 },
-      { "sid": "destruct-2", "rate": -1 },
       { "sid": "expand", "rate": 0.2 },
       { "sid": "destruct-3", "rate": 0.1 },
       { "sid": "single", "rate": -1 },
@@ -169,8 +167,9 @@
       },
       { "sid": "pat-male", "rate": 0.5 },
       { "sid": "pat-female", "rate": 0.5 },
-      { "sid": "dental-prob", "rate": -1 },
       { "sid": "recent-gingival", "rate": -1 },
+      { "sid": "super", "rate": -1},
+      { "sid": "malform", "rate": -1},
       { "sid": "primary-1", "rate": 0.1 },
       { "sid": "permanent-1", "rate": 0.9 },
       { "sid": "primary-2", "rate": -1 },
@@ -203,7 +202,6 @@
       { "sid": "slow-0", "rate": 0.8 },
       { "sid": "moderate-0", "rate": 0.2 },
       { "sid": "rapid-0", "rate": -1 },
-      { "sid": "vital", "rate": -1 },
       { "sid": "nonvital", "rate": -1 },
       { "sid": "hemorrhage", "rate": -1 },
       { "sid": "pain-1", "rate": -1 },
@@ -302,8 +300,6 @@
       { "sid": "destruct-0", "rate": -1 },
       { "sid": "dispalce-2", "rate": 0.2 },
       { "sid": "destruct-1", "rate": 0.05 },
-      { "sid": "sclerotic-1", "rate": 0.05 },
-      { "sid": "destruct-2", "rate": -1 },
       { "sid": "expand", "rate": 0.5 },
       { "sid": "destruct-3", "rate": 0.1 },
       { "sid": "single", "rate": -1 },
