--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
-    "build": "bun scripts/build.js",
+    "build": "node scripts/build.js",
     "test": "bun scripts/test.js",
     "asbuild": "asc assembly/index.ts --target release",
     "pull": "git fetch && git pull",
