--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mui/lab": "^5.0.0-alpha.140",
     "@mui/material": "^5.14.5",
     "@mui/styled-engine-sc": "^5.12.0",
+    "@nivo/bar": "^0.84.0",
     "@nivo/treemap": "^0.84.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@react-spring/web": "^9.7.3",
