--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-webpack-plugin": "^3.1.1",
     "file-loader": "^6.2.0",
     "fs-extra": "^10.0.0",
+    "html-to-image": "^1.11.11",
     "html-webpack-plugin": "^5.5.0",
     "html2canvas": "^1.4.1",
     "identity-obj-proxy": "^3.0.0",
