some options in symptom and diseases has changed

--- a/src/data/diseases.json
+++ b/src/data/diseases.json
@@ -16,10 +16,8 @@
       { "sid": "recent-gingival", "rate": -1 },
       { "sid": "super", "rate": -1 },
       { "sid": "malform", "rate": -1 },
-      { "sid": "primary-1", "rate": -1 },
-      { "sid": "permanent-1", "rate": -1 },
-      { "sid": "primary-2", "rate": -1 },
-      { "sid": "permanent-2", "rate": -1 },
+      { "sid": "localized-1", "rate": -1 },
+      { "sid": "generalized-1", "rate": -1 },
       { "sid": "history-of-surgery", "rate": -1 },
       { "sid": "increase-1", "rate": -1 },
       { "sid": "decrease-1", "rate": -1 },
@@ -28,16 +26,6 @@
       { "sid": "increase-3", "rate": -1 },
       { "sid": "decrease-3", "rate": -1 },
       { "sid": "hist-radio", "rate": -1 },
-      { "sid": "paget-dis", "rate": -1 },
-      { "sid": "fibrous", "rate": -1 },
-      { "sid": "cherubism", "rate": -1 },
-      { "sid": "osteoporosis", "rate": -1 },
-      { "sid": "osteopetrosis", "rate": -1 },
-      { "sid": "osteogensis", "rate": -1 },
-      { "sid": "osteomalacia", "rate": -1 },
-      { "sid": "hyperpara", "rate": -1 },
-      { "sid": "multiple-myeloma", "rate": -1 },
-      { "sid": "langer", "rate": -1 },
       { "sid": "fever-illness", "rate": -1 },
       { "sid": "paresth-anes", "rate": -1 },
       { "sid": "bleeding", "rate": -1 },
@@ -120,28 +108,23 @@
       { "sid": "diffuse", "rate": -1 },
       { "sid": "radiopaue-zone", "rate": -1 },
       { "sid": "radiopaque-nozone", "rate": -1 },
-      { "sid": "uniocular", "rate": 0.85 },
+      { "sid": "uni1", "rate": 0.85 },
+      { "sid": "uni2", "rate": 0.15},
+      { "sid": "wispy1", "rate": -1 },
+      { "sid": "coarse1", "rate": -1 },
+      { "sid": "wispy2", "rate": -1 },
+      { "sid": "coarse2", "rate": -1 },
       { "sid": "rarefaction", "rate": -1 },
-      { "sid": "soap", "rate": -1 },
-      { "sid": "honey", "rate": -1 },
-      { "sid": "tenis", "rate": -1 },
-      { "sid": "unusual", "rate": -1 },
-      { "sid": "dystrophic", "rate": 0.15 },
-      { "sid": "amorph", "rate": -1 },
-      { "sid": "dent-struct", "rate": -1 },
-      { "sid": "wispy", "rate": -1 },
-      { "sid": "coarse", "rate": -1 },
-      { "sid": "dispalce-0", "rate": -1 },
+      { "sid": "displace-0", "rate": 0.125 },
       { "sid": "resorp-1", "rate": 0.125 },
       { "sid": "resorp-2", "rate": -1 },
-      { "sid": "divergence", "rate": 0.125 },
       { "sid": "dura", "rate": -1 },
       { "sid": "wide-0", "rate": -1 },
       { "sid": "wide-1", "rate": -1 },
-      { "sid": "dispalce-1", "rate": 0.1 },
+      { "sid": "displace-1", "rate": 0.1 },
       { "sid": "enlarge", "rate": -1 },
       { "sid": "destruct-0", "rate": -1 },
-      { "sid": "dispalce-2", "rate": 0.1 },
+      { "sid": "displace-2", "rate": 0.1 },
       { "sid": "destruct-1", "rate": 0.05 },
       { "sid": "expand", "rate": 0.2 },
       { "sid": "destruct-3", "rate": 0.1 },
@@ -172,10 +155,8 @@
       { "sid": "recent-gingival", "rate": -1 },
       { "sid": "super", "rate": -1 },
       { "sid": "malform", "rate": -1 },
-      { "sid": "primary-1", "rate": 0.1 },
-      { "sid": "permanent-1", "rate": 0.9 },
-      { "sid": "primary-2", "rate": -1 },
-      { "sid": "permanent-2", "rate": -1 },
+      { "sid": "localized-1", "rate": 1 },
+      { "sid": "generalized-1", "rate": -1 },
       { "sid": "history-of-surgery", "rate": -1 },
       { "sid": "increase-1", "rate": -1 },
       { "sid": "decrease-1", "rate": -1 },
@@ -184,16 +165,6 @@
       { "sid": "increase-3", "rate": -1 },
       { "sid": "decrease-3", "rate": -1 },
       { "sid": "hist-radio", "rate": -1 },
-      { "sid": "paget-dis", "rate": -1 },
-      { "sid": "fibrous", "rate": -1 },
-      { "sid": "cherubism", "rate": -1 },
-      { "sid": "osteoporosis", "rate": -1 },
-      { "sid": "osteopetrosis", "rate": -1 },
-      { "sid": "osteogensis", "rate": -1 },
-      { "sid": "osteomalacia", "rate": -1 },
-      { "sid": "hyperpara", "rate": -1 },
-      { "sid": "multiple-myeloma", "rate": -1 },
-      { "sid": "langer", "rate": -1 },
       { "sid": "fever-illness", "rate": -1 },
       { "sid": "paresth-anes", "rate": -1 },
       { "sid": "bleeding", "rate": -1 },
@@ -279,28 +250,23 @@
       { "sid": "diffuse", "rate": -1 },
       { "sid": "radiopaue-zone", "rate": -1 },
       { "sid": "radiopaque-nozone", "rate": -1 },
-      { "sid": "uniocular", "rate": 1 },
+      { "sid": "uni1", "rate": 1 },
+      { "sid": "uni2", "rate": -1},
+      { "sid": "wispy1", "rate": -1 },
+      { "sid": "coarse1", "rate": -1 },
+      { "sid": "wispy2", "rate": -1 },
+      { "sid": "coarse2", "rate": -1 },
       { "sid": "rarefaction", "rate": -1 },
-      { "sid": "soap", "rate": -1 },
-      { "sid": "honey", "rate": -1 },
-      { "sid": "tenis", "rate": -1 },
-      { "sid": "unusual", "rate": -1 },
-      { "sid": "dystrophic", "rate": -1 },
-      { "sid": "amorph", "rate": -1 },
-      { "sid": "dent-struct", "rate": -1 },
-      { "sid": "wispy", "rate": -1 },
-      { "sid": "coarse", "rate": -1 },
-      { "sid": "dispalce-0", "rate": 0.2 },
+      { "sid": "displace-0", "rate": 0.2 },
       { "sid": "resorp-1", "rate": 0.15 },
       { "sid": "resorp-2", "rate": -1 },
-      { "sid": "divergence", "rate": -1 },
       { "sid": "dura", "rate": -1 },
       { "sid": "wide-0", "rate": -1 },
       { "sid": "wide-1", "rate": -1 },
-      { "sid": "dispalce-1", "rate": 0.1 },
+      { "sid": "displace-1", "rate": 0.1 },
       { "sid": "enlarge", "rate": -1 },
       { "sid": "destruct-0", "rate": -1 },
-      { "sid": "dispalce-2", "rate": 0.2 },
+      { "sid": "displace-2", "rate": 0.2 },
       { "sid": "destruct-1", "rate": 0.05 },
       { "sid": "expand", "rate": 0.5 },
       { "sid": "destruct-3", "rate": 0.1 },
@@ -331,10 +297,8 @@
       { "sid": "recent-gingival", "rate": -1 },
       { "sid": "super", "rate": -1 },
       { "sid": "malform", "rate": -1 },
-      { "sid": "primary-1", "rate": 0.1 },
-      { "sid": "permanent-1", "rate": 0.9 },
-      { "sid": "primary-2", "rate": -1 },
-      { "sid": "permanent-2", "rate": -1 },
+      { "sid": "localized-1", "rate": -1 },
+      { "sid": "generalized-1", "rate": -1 },
       { "sid": "history-of-surgery", "rate": -1 },
       { "sid": "increase-1", "rate": -1 },
       { "sid": "decrease-1", "rate": -1 },
@@ -343,16 +307,6 @@
       { "sid": "increase-3", "rate": -1 },
       { "sid": "decrease-3", "rate": -1 },
       { "sid": "hist-radio", "rate": -1 },
-      { "sid": "paget-dis", "rate": -1 },
-      { "sid": "fibrous", "rate": -1 },
-      { "sid": "cherubism", "rate": -1 },
-      { "sid": "osteoporosis", "rate": -1 },
-      { "sid": "osteopetrosis", "rate": -1 },
-      { "sid": "osteogensis", "rate": -1 },
-      { "sid": "osteomalacia", "rate": -1 },
-      { "sid": "hyperpara", "rate": -1 },
-      { "sid": "multiple-myeloma", "rate": -1 },
-      { "sid": "langer", "rate": -1 },
       { "sid": "fever-illness", "rate": -1 },
       { "sid": "paresth-anes", "rate": -1 },
       { "sid": "bleeding", "rate": -1 },
@@ -438,28 +392,23 @@
       { "sid": "diffuse", "rate": -1 },
       { "sid": "radiopaue-zone", "rate": -1 },
       { "sid": "radiopaque-nozone", "rate": -1 },
-      { "sid": "uniocular", "rate": 1 },
+      { "sid": "uni1", "rate": 1 },
+      { "sid": "uni2", "rate": -1},
+      { "sid": "wispy1", "rate": -1 },
+      { "sid": "coarse1", "rate": -1 },
+      { "sid": "wispy2", "rate": -1 },
+      { "sid": "coarse2", "rate": -1 },
       { "sid": "rarefaction", "rate": -1 },
-      { "sid": "soap", "rate": -1 },
-      { "sid": "honey", "rate": -1 },
-      { "sid": "tenis", "rate": -1 },
-      { "sid": "unusual", "rate": -1 },
-      { "sid": "dystrophic", "rate": -1 },
-      { "sid": "amorph", "rate": -1 },
-      { "sid": "dent-struct", "rate": -1 },
-      { "sid": "wispy", "rate": -1 },
-      { "sid": "coarse", "rate": -1 },
-      { "sid": "dispalce-0", "rate": 0.2 },
+      { "sid": "displace-0", "rate": 0.2 },
       { "sid": "resorp-1", "rate": 0.15 },
       { "sid": "resorp-2", "rate": -1 },
-      { "sid": "divergence", "rate": -1 },
       { "sid": "dura", "rate": -1 },
       { "sid": "wide-0", "rate": -1 },
       { "sid": "wide-1", "rate": -1 },
-      { "sid": "dispalce-1", "rate": 0.1 },
+      { "sid": "displace-1", "rate": 0.1 },
       { "sid": "enlarge", "rate": -1 },
       { "sid": "destruct-0", "rate": -1 },
-      { "sid": "dispalce-2", "rate": 0.2 },
+      { "sid": "displace-2", "rate": 0.2 },
       { "sid": "destruct-1", "rate": 0.05 },
       { "sid": "expand", "rate": 0.5 },
       { "sid": "destruct-3", "rate": 0.1 },
@@ -490,10 +439,8 @@
       { "sid": "recent-gingival", "rate": -1 },
       { "sid": "super", "rate": -1 },
       { "sid": "malform", "rate": -1 },
-      { "sid": "primary-1", "rate": 0.1 },
-      { "sid": "permanent-1", "rate": 0.9 },
-      { "sid": "primary-2", "rate": -1 },
-      { "sid": "permanent-2", "rate": -1 },
+      { "sid": "localized-1", "rate": -1 },
+      { "sid": "generalized-1", "rate": -1 },
       { "sid": "history-of-surgery", "rate": -1 },
       { "sid": "increase-1", "rate": -1 },
       { "sid": "decrease-1", "rate": -1 },
@@ -502,16 +449,6 @@
       { "sid": "increase-3", "rate": -1 },
       { "sid": "decrease-3", "rate": -1 },
       { "sid": "hist-radio", "rate": -1 },
-      { "sid": "paget-dis", "rate": -1 },
-      { "sid": "fibrous", "rate": -1 },
-      { "sid": "cherubism", "rate": -1 },
-      { "sid": "osteoporosis", "rate": -1 },
-      { "sid": "osteopetrosis", "rate": -1 },
-      { "sid": "osteogensis", "rate": -1 },
-      { "sid": "osteomalacia", "rate": -1 },
-      { "sid": "hyperpara", "rate": -1 },
-      { "sid": "multiple-myeloma", "rate": -1 },
-      { "sid": "langer", "rate": -1 },
       { "sid": "fever-illness", "rate": -1 },
       { "sid": "paresth-anes", "rate": -1 },
       { "sid": "bleeding", "rate": -1 },
@@ -597,28 +534,23 @@
       { "sid": "diffuse", "rate": -1 },
       { "sid": "radiopaue-zone", "rate": -1 },
       { "sid": "radiopaque-nozone", "rate": -1 },
-      { "sid": "uniocular", "rate": 1 },
+      { "sid": "uni1", "rate": 1 },
+      { "sid": "uni2", "rate": -1},
+      { "sid": "wispy1", "rate": -1 },
+      { "sid": "coarse1", "rate": -1 },
+      { "sid": "wispy2", "rate": -1 },
+      { "sid": "coarse2", "rate": -1 },
       { "sid": "rarefaction", "rate": -1 },
-      { "sid": "soap", "rate": -1 },
-      { "sid": "honey", "rate": -1 },
-      { "sid": "tenis", "rate": -1 },
-      { "sid": "unusual", "rate": -1 },
-      { "sid": "dystrophic", "rate": -1 },
-      { "sid": "amorph", "rate": -1 },
-      { "sid": "dent-struct", "rate": -1 },
-      { "sid": "wispy", "rate": -1 },
-      { "sid": "coarse", "rate": -1 },
-      { "sid": "dispalce-0", "rate": 0.2 },
+      { "sid": "displace-0", "rate": 0.2 },
       { "sid": "resorp-1", "rate": 0.15 },
       { "sid": "resorp-2", "rate": -1 },
-      { "sid": "divergence", "rate": -1 },
       { "sid": "dura", "rate": -1 },
       { "sid": "wide-0", "rate": -1 },
       { "sid": "wide-1", "rate": -1 },
-      { "sid": "dispalce-1", "rate": 0.1 },
+      { "sid": "displace-1", "rate": 0.1 },
       { "sid": "enlarge", "rate": -1 },
       { "sid": "destruct-0", "rate": -1 },
-      { "sid": "dispalce-2", "rate": 0.2 },
+      { "sid": "displace-2", "rate": 0.2 },
       { "sid": "destruct-1", "rate": 0.05 },
       { "sid": "expand", "rate": 0.5 },
       { "sid": "destruct-3", "rate": 0.1 },
@@ -649,10 +581,8 @@
       { "sid": "recent-gingival", "rate": -1 },
       { "sid": "super", "rate": -1 },
       { "sid": "malform", "rate": -1 },
-      { "sid": "primary-1", "rate": 0.1 },
-      { "sid": "permanent-1", "rate": 0.9 },
-      { "sid": "primary-2", "rate": -1 },
-      { "sid": "permanent-2", "rate": -1 },
+      { "sid": "localized-1", "rate": -1 },
+      { "sid": "generalized-1", "rate": -1 },
       { "sid": "history-of-surgery", "rate": -1 },
       { "sid": "increase-1", "rate": -1 },
       { "sid": "decrease-1", "rate": -1 },
@@ -661,16 +591,6 @@
       { "sid": "increase-3", "rate": -1 },
       { "sid": "decrease-3", "rate": -1 },
       { "sid": "hist-radio", "rate": -1 },
-      { "sid": "paget-dis", "rate": -1 },
-      { "sid": "fibrous", "rate": -1 },
-      { "sid": "cherubism", "rate": -1 },
-      { "sid": "osteoporosis", "rate": -1 },
-      { "sid": "osteopetrosis", "rate": -1 },
-      { "sid": "osteogensis", "rate": -1 },
-      { "sid": "osteomalacia", "rate": -1 },
-      { "sid": "hyperpara", "rate": -1 },
-      { "sid": "multiple-myeloma", "rate": -1 },
-      { "sid": "langer", "rate": -1 },
       { "sid": "fever-illness", "rate": -1 },
       { "sid": "paresth-anes", "rate": -1 },
       { "sid": "bleeding", "rate": -1 },
@@ -756,28 +676,23 @@
       { "sid": "diffuse", "rate": -1 },
       { "sid": "radiopaue-zone", "rate": -1 },
       { "sid": "radiopaque-nozone", "rate": -1 },
-      { "sid": "uniocular", "rate": 1 },
+      { "sid": "uni1", "rate": 1 },
+      { "sid": "uni2", "rate": -1},
+      { "sid": "wispy1", "rate": -1 },
+      { "sid": "coarse1", "rate": -1 },
+      { "sid": "wispy2", "rate": -1 },
+      { "sid": "coarse2", "rate": -1 },
       { "sid": "rarefaction", "rate": -1 },
-      { "sid": "soap", "rate": -1 },
-      { "sid": "honey", "rate": -1 },
-      { "sid": "tenis", "rate": -1 },
-      { "sid": "unusual", "rate": -1 },
-      { "sid": "dystrophic", "rate": -1 },
-      { "sid": "amorph", "rate": -1 },
-      { "sid": "dent-struct", "rate": -1 },
-      { "sid": "wispy", "rate": -1 },
-      { "sid": "coarse", "rate": -1 },
-      { "sid": "dispalce-0", "rate": 0.2 },
+      { "sid": "displace-0", "rate": 0.2 },
       { "sid": "resorp-1", "rate": 0.15 },
       { "sid": "resorp-2", "rate": -1 },
-      { "sid": "divergence", "rate": -1 },
       { "sid": "dura", "rate": -1 },
       { "sid": "wide-0", "rate": -1 },
       { "sid": "wide-1", "rate": -1 },
-      { "sid": "dispalce-1", "rate": 0.1 },
+      { "sid": "displace-1", "rate": 0.1 },
       { "sid": "enlarge", "rate": -1 },
       { "sid": "destruct-0", "rate": -1 },
-      { "sid": "dispalce-2", "rate": 0.2 },
+      { "sid": "displace-2", "rate": 0.2 },
       { "sid": "destruct-1", "rate": 0.05 },
       { "sid": "expand", "rate": 0.5 },
       { "sid": "destruct-3", "rate": 0.1 },
